# waybracelet

./: Cargo.toml  flake.nix
src/: components.rs  features.rs  main.rs  styles.rs  subscriptions.rs  windows.rs
src/components/: beads.rs  styles.rs  waves_player.rs
src/features/: notifications.rs  power_menu.rs  status_bar.rs  volume_osd.rs
src/features/notifications/: components.rs  subscriptions.rs
src/features/power_menu/: components.rs
src/features/status_bar/: components.rs  subscriptions.rs
src/features/volume_osd/: components.rs
