[package]
name = "waybracelet"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
hyprland = { version = "0.4.0-beta.3", default-features = false, features = ["async-lite", "listener"] }
iced = { version = "0.14.0", features = ["canvas", "smol"] }
iced_layershell = "0.15.0-rc1"
lucide-icons = { version = "0.562.0", features = ["iced"] }
smol = "2.0.2"
mothscheme = { git = "https://codeberg.org/dcxo/mothscheme", features = ["iced"] }
zbus = { version = "5.13.1", features = ["async-io"] }

[features]
debug = ["iced_layershell/debug"]
